--- a/Goals/Goals/Goals.csproj
+++ b/Goals/Goals/Goals.csproj
@@ -49,9 +49,27 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Autofac.Mvc3.2.6.3.862\lib\NET40\Autofac.Integration.Mvc.dll</HintPath>
     </Reference>
+    <Reference Include="FluentValidation">
+      <HintPath>..\packages\FluentValidation.4.0.0.0\lib\Net40\FluentValidation.dll</HintPath>
+    </Reference>
+    <Reference Include="FluentValidation.Mvc">
+      <HintPath>..\packages\FluentValidation.MVC4.4.0.0.0\lib\Net40\FluentValidation.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Web.Mvc">
       <HintPath>..\packages\Mvc3Futures.3.0.20105.0\lib\Microsoft.Web.Mvc.dll</HintPath>
+    </Reference>
+    <Reference Include="MongoDB.Bson">
+      <HintPath>..\packages\mongocsharpdriver.1.6.1\lib\net35\MongoDB.Bson.dll</HintPath>
+    </Reference>
+    <Reference Include="MongoDB.Driver">
+      <HintPath>..\packages\mongocsharpdriver.1.6.1\lib\net35\MongoDB.Driver.dll</HintPath>
+    </Reference>
+    <Reference Include="Simple.Data">
+      <HintPath>..\packages\Simple.Data.Core.1.0.0-rc3\lib\net40\Simple.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="Simple.Data.MongoDB">
+      <HintPath>..\packages\Simple.Data.MongoDB.0.18.0\lib\net40\Simple.Data.MongoDB.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -138,6 +156,8 @@
     <Compile Include="Controllers\CrudController.cs" />
     <Compile Include="Controllers\GoalsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Databases\Database.cs" />
+    <Compile Include="Databases\IDatabase.cs" />
     <Compile Include="Filters\ExportModelStateToTempData.cs" />
     <Compile Include="Filters\ImportModelStateFromTempData.cs" />
     <Compile Include="Filters\ModelStateTempDataTransfer.cs" />
@@ -149,9 +169,9 @@
     <Compile Include="Models\Goal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IRepository.cs" />
-    <Compile Include="Repositories\SessionRepository.cs" />
-    <Compile Include="SessionState\ISession.cs" />
-    <Compile Include="SessionState\Session.cs" />
+    <Compile Include="Repositories\DatabaseRepository.cs" />
+    <Compile Include="Validation\GoalValidator.cs" />
+    <Compile Include="Validation\ModelValidatorFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-responsive.css" />
@@ -249,6 +269,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Goals\Create.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Guid.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\Object.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\string.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
