--- a/Goals/Goals/Web.config
+++ b/Goals/Goals/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Goals-20130524221754;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Goals-20130524221754.mdf" />
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="mongodb://localhost/Goals" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -84,6 +84,14 @@
       <dependentAssembly>
         <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MongoDB.Bson" publicKeyToken="f686731cfb9cc103" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.6.1.4678" newVersion="1.6.1.4678" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MongoDB.Driver" publicKeyToken="f686731cfb9cc103" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.6.1.4678" newVersion="1.6.1.4678" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
