--- a/Goals/Goals/packages.config
+++ b/Goals/Goals/packages.config
@@ -4,6 +4,8 @@
   <package id="Autofac.Mvc3" version="2.6.3.862" targetFramework="net45" />
   <package id="Autofac.Mvc4" version="3.0.0" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
+  <package id="FluentValidation" version="4.0.0.0" targetFramework="net45" />
+  <package id="FluentValidation.MVC4" version="4.0.0.0" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.9.0.1" targetFramework="net45" />
@@ -23,8 +25,11 @@
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.5.3" targetFramework="net45" />
+  <package id="mongocsharpdriver" version="1.6.1" targetFramework="net45" />
   <package id="Mvc3Futures" version="3.0.20105.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net45" />
+  <package id="Simple.Data.Core" version="1.0.0-rc3" targetFramework="net45" />
+  <package id="Simple.Data.MongoDB" version="0.18.0" targetFramework="net45" />
   <package id="Twitter.Bootstrap" version="2.3.2" targetFramework="net45" />
   <package id="WebGrease" version="1.1.0" targetFramework="net45" />
 </packages>
